--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                             </div>
                         </section>
                         <section className="max-w-7xl mx-auto px-4 py-12 text-right">
-                            <h2 className="text-2xl md:text-4xl font-black text-slate-900 mb-8 md:mb-12">آخرین ورودی‌های بندر</h2>
+                            <h2 className="text-2xl md:text-4xl font-black text-slate-900 mb-8 md:mb-12">آخرین ورودی‌ها</h2>
                             <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-10">
                                 {products.slice(0, 12).map(product => <ProductCard key={product.id} product={product} onProductClick={handleProductClick} formatPersianDate={formatPersianDate} />)}
                             </div>
